# xmg_backlight_installer

./: .gitignore  CHANGELOG.md  README.md  install.py
driver/: LICENSE  README.md  pyproject.toml
driver/src/ite8291r3_ctl/: __init__.py  __main__.py  ite8291r3.py
installer/: install.py
installer_lib/: __init__.py  artifacts.py  ownership.py  processes.py  transaction.py  udev.py  versioning.py
source/: keyboard_backlight.py  power_state_monitor.py  restore_profile.py
source/translations/: de.json  en.json  es.json  fr.json
source/xmg_backlight/: __init__.py  activity_log_mixin.py  app.py  async_tasks.py  automation_core.py  automation_daemon.py  automation_mixin.py  capabilities.py  commands.py  constants.py  device_mixin.py  diagnostics.py  driver.py  effects_mixin.py  export_mixin.py  language_mixin.py  power_state_monitor.py  profile_logic.py  profile_mixin.py  restore_profile.py  services.py  storage.py  theme_mixin.py  translations.py  tray_mixin.py  ui_helpers.py  validation.py
source/xmg_backlight/translations/: de.json  en.json  es.json  fr.json  it.json
tests/: bootstrap.py  test_automation.py  test_commands.py  test_diagnostics.py  test_driver_execution.py  test_driver_package.py  test_helpers.py  test_installer_safety.py  test_profile_logic.py  test_restore.py  test_services.py  test_storage.py  test_versioning.py
