[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "ite8291r3-ctl"
version = "0.4.post1"
description = "ITE 8291 (rev 0.03) userspace driver - XMG Backlight bundled fork"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-2.0-only"
authors = [{name = "Barnabás Pőcze and contributors"}]
dependencies = ["pyusb==1.3.1"]

[project.scripts]
ite8291r3-ctl = "ite8291r3_ctl.__main__:main"

[project.urls]
Upstream = "https://github.com/pobrn/ite8291r3-ctl"
Source = "https://github.com/Darayavaush-84/xmg_backlight_installer"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ite8291r3_ctl"]
exclude = ["xmg_backlight*"]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__/*", "*.pyc", "*.pyo"]
